--- a/app/src/main/res/layout/view_recipe.xml
+++ b/app/src/main/res/layout/view_recipe.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintHorizontal_bias="0"
-        tools:src="@drawable/food"
+        tools:src="@drawable/img_food"
         />
 
     <TextView
