New Recipe screen was made (v.1)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -16,14 +17,14 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinator"
+        android:id="@+id/coordinator_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/my_toolbar">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recipe_recycler_view"
+            android:id="@+id/recipe_recycler_view_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
@@ -35,18 +36,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            app:backgroundTint="@color/mint_500"
+            app:backgroundTint="@color/colorSecondaryVariant"
             app:fabAlignmentMode="end"
             app:hideOnScroll="true"
             app:layout_scrollFlags="scroll|enterAlways"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab1"
+            app:layout_anchor="@id/bottom_app_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
+
             android:contentDescription="@string/add"
             android:src="@drawable/ic_add"
-            app:layout_anchor="@id/bottom_app_bar"
+
             app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
