--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
-
-    tools:context=".NewRecipe">
+    tools:context=".NewRecipeActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,7 +13,6 @@
         android:background="@color/cardview_shadow_start_color"
         android:paddingBottom="15dp"
         app:layout_constraintTop_toTopOf="parent">
-
 
         <ImageView
             android:id="@+id/close"
@@ -39,7 +36,6 @@
             android:background="@color/cardview_shadow_end_color"
             android:clickable="true"
             android:focusable="true"
-            android:fontFamily="@font/montserrat"
             android:text="@string/next_step"
             android:textColor="@color/white"
             android:textSize="14dp"
@@ -52,11 +48,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/montserrat_bold"
             android:includeFontPadding="false"
             android:text="@string/new_recipe"
             android:textColor="@color/black"
             android:textSize="22dp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/close" />
 
@@ -66,17 +62,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:fontFamily="@font/montserrat_bold"
             android:includeFontPadding="false"
             android:text="@string/shag1"
             android:textSize="16dp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/new_recipe" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -132,7 +128,6 @@
                     android:layout_gravity="right"
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/montserrat"
                     android:text="@string/necessarily"
                     android:textSize="12dp" />
 
@@ -155,14 +150,12 @@
                     android:layout_margin="10dp"
                     android:hint="@string/count_portion"
                     app:endIconMode="clear_text"
-                    app:startIconDrawable="@drawable/ic_baseline_person_24"
-                    >
+                    app:startIconDrawable="@drawable/ic_baseline_person_24">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="number"
-                        android:fontFamily="@font/montserrat"/>
+                        android:inputType="number" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -182,8 +175,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="number"
-                        android:fontFamily="@font/montserrat"/>
+                        android:inputType="number" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
@@ -193,7 +185,6 @@
                     android:layout_gravity="end"
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/montserrat"
                     android:text="@string/necessarily"
                     android:textSize="12dp" />
 
@@ -209,17 +200,16 @@
                 android:layout_gravity="start"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/montserrat_bold"
                 android:text="@string/category"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/categorymin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="@string/categorymin"
-                android:fontFamily="@font/montserrat"/>
+                android:text="@string/categorymin" />
 
             <TextView
                 android:id="@+id/categories"
@@ -228,7 +218,6 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
-                android:fontFamily="@font/montserrat"
                 android:text="sdlvns"
                 android:visibility="gone" />
 
@@ -247,8 +236,10 @@
                 app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/outlinedInputCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusableInTouchMode="false"
                     android:inputType="numberDecimal"
                     android:fontFamily="@font/montserrat"/>
             </com.google.android.material.textfield.TextInputLayout>
@@ -264,16 +255,15 @@
                 android:layout_gravity="start"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/montserrat_bold"
                 android:text="@string/ingredients"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/ingredientmin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/montserrat"
                 android:text="@string/ingredientsmin" />
 
             <TextView
@@ -283,7 +273,6 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
-                android:fontFamily="@font/montserrat"
                 android:text="sdlvns"
                 android:visibility="gone" />
 
@@ -305,8 +294,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:fontFamily="@font/montserrat"/>
+                    android:inputType="numberDecimal" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.divider.MaterialDivider
@@ -320,16 +308,15 @@
                 android:layout_gravity="start"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/montserrat_bold"
                 android:text="@string/cooking"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/cookingmin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/montserrat"
                 android:text="@string/cookingmin" />
 
             <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -349,19 +336,15 @@
 
             <Button
                 android:id="@+id/textButton"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/addstep"
-                android:fontFamily="@font/montserrat"
-                android:textColor="?attr/colorOnSurface"
-                android:textAllCaps="false"
-                app:icon="@drawable/ic_add"
-                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-
-
-
+                android:text="@string/addstep"
+                android:textAllCaps="false"
+                android:textColor="?attr/colorOnSurface"
+                app:icon="@drawable/ic_add"
                 />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
