Back button on NewRecipeActivity and IngredientActivity was added

--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -294,6 +294,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusableInTouchMode="false"
                     android:inputType="numberDecimal" />
             </com.google.android.material.textfield.TextInputLayout>
 
