--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="mint_500">#00bfa5</color>
-    <color name="mint_700">#008e76</color>
-    <color name="mint_300">#5df2d6</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="colorPrimary">#00bfa5</color>
+    <color name="colorPrimaryVariant">#e2f1f8</color>
+    <color name="colorOnPrimary">#5df2d6</color>
+    <color name="colorSecondary">#00bfa5</color>
+    <color name="colorSecondaryVariant">#b0bec5</color>
+    <color name="colorOnSecondary">#808e95</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
