--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -8,9 +8,9 @@
 
     <com.google.android.material.appbar.AppBarLayout
 
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/appBar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -18,57 +18,62 @@
             android:id="@+id/topAppBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/ingredient"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             app:navigationIconTint="@color/white"
-            app:titleTextColor="@color/white"
-            />
+            app:title="@string/ingredient"
+            app:titleTextColor="@color/white" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-        android:id="@+id/ingredientname"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/outlinedTextIngredientName"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:hint="@string/ingredient"
+        app:endIconDrawable="@drawable/ic_baseline_clear_24"
+        app:endIconMode="clear_text"
         app:layout_constraintTop_toBottomOf="@id/appBar"
-        android:text="@string/ingredient"
-        android:background="@color/cardview_shadow_start_color"
-        android:textSize="20sp"
-        android:paddingStart="20sp"
-        android:padding="10sp"
+        app:startIconDrawable="@drawable/ic_baseline_eco_24">
 
-
-        />
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/ingredientproducer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ingredientname"
-        android:text="@string/ingredientproducer"
         android:background="@color/cardview_shadow_start_color"
-        android:textSize="16sp"
-        android:paddingBottom="10sp"
-        android:paddingEnd="10sp"
         android:paddingStart="20sp"
-        />
+        android:paddingEnd="10sp"
+        android:paddingBottom="10sp"
+        android:text="@string/ingredientproducer"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientName" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/outlinedTextIngredientQty"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/ingredientproducer"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="0dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:hint="@string/ingredientqty"
+        app:endIconDrawable="@drawable/ic_baseline_clear_24"
         app:endIconMode="clear_text"
-        app:startIconDrawable="@drawable/ic_baseline_speed_24"
-        app:endIconDrawable="@drawable/ic_baseline_clear_24">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientName"
+        app:startIconDrawable="@drawable/ic_baseline_speed_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -81,51 +86,50 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientQty"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="0dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:hint="@string/ingredientunit"
         app:endIconMode="clear_text"
-        app:startIconDrawable="@drawable/ic_baseline_format_list_bulleted_24"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientQty"
+        app:startIconDrawable="@drawable/ic_baseline_format_list_bulleted_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal" />
+            android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientUnit"
-        app:layout_constraintEnd_toStartOf="@id/btnDelete"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="10sp"
         android:text="@string/save"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toStartOf="@id/btnDelete"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientUnit" />
+
     <Button
         android:id="@+id/btnDelete"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/btnSave"
-        app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientUnit"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="10sp"
         android:text="@string/delete"
         android:textColor="@color/white"
         android:visibility="gone"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnSave"
+        app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientUnit" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/layoutCalor"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="2sp"
         android:layout_marginTop="20sp"
+        android:layout_marginEnd="2sp"
         android:background="@color/cardview_shadow_start_color"
         android:gravity="center"
         android:orientation="vertical"
@@ -150,34 +154,34 @@
         android:id="@+id/layoutCarbo"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/btnSave"
-        app:layout_constraintStart_toEndOf="@id/layoutCalor"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical"
-        android:gravity="center"
         android:layout_marginStart="2sp"
         android:layout_marginTop="20sp"
-        android:background="@color/cardview_shadow_start_color">
+        android:background="@color/cardview_shadow_start_color"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/layoutCalor"
+        app:layout_constraintTop_toBottomOf="@id/btnSave">
+
         <TextView
             android:id="@+id/carbo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/carbohydrates"
-            />
+            android:text="@string/carbohydrates" />
+
         <TextView
             android:id="@+id/carboqty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1235г"
-            />
+            android:text="1235г" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/layoutFat"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="2sp"
         android:layout_marginTop="4sp"
+        android:layout_marginEnd="2sp"
         android:background="@color/cardview_shadow_start_color"
         android:gravity="center"
         android:orientation="vertical"
@@ -202,29 +206,27 @@
         android:id="@+id/layoutProt"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/layoutCarbo"
-        app:layout_constraintStart_toEndOf="@id/layoutFat"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical"
-        android:gravity="center"
         android:layout_marginStart="2sp"
         android:layout_marginTop="4sp"
-        android:background="@color/cardview_shadow_start_color">
+        android:background="@color/cardview_shadow_start_color"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/layoutFat"
+        app:layout_constraintTop_toBottomOf="@id/layoutCarbo">
+
         <TextView
             android:id="@+id/proteins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/proteins"
-            />
+            android:text="@string/proteins" />
+
         <TextView
             android:id="@+id/protqty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1235г"
-            />
+            android:text="1235г" />
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
