--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -41,6 +41,7 @@
         app:startIconDrawable="@drawable/ic_baseline_eco_24">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -76,6 +77,7 @@
         app:startIconDrawable="@drawable/ic_baseline_speed_24">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextQty"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal" />
@@ -83,7 +85,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/outlinedTextIngredientUnit"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -91,14 +93,15 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:hint="@string/ingredientunit"
-        app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientQty"
         app:startIconDrawable="@drawable/ic_baseline_format_list_bulleted_24">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+            android:id="@+id/spinnerIngredUnits"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="none"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -108,6 +111,7 @@
         android:layout_margin="10sp"
         android:text="@string/save"
         android:textColor="@color/white"
+        android:enabled="false"
         app:layout_constraintEnd_toStartOf="@id/btnDelete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientUnit" />
