--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -14,14 +14,12 @@
         android:paddingBottom="15dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_width="23dp"
+            android:layout_height="20dp"
             android:layout_marginTop="20dp"
-            android:clickable="true"
-            android:focusable="true"
+            android:layout_marginStart="20dp"
             android:src="@drawable/ic_baseline_clear_24"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +70,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -98,6 +96,7 @@
                     app:endIconMode="clear_text">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/textInputName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -116,6 +115,7 @@
                     app:endIconMode="clear_text">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/textInputDescription"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -153,6 +153,7 @@
                     app:startIconDrawable="@drawable/ic_baseline_person_24">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/textInputQtyPortions"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number" />
@@ -173,6 +174,7 @@
                     app:startIconDrawable="@drawable/ic_baseline_schedule_24">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/textInputTime"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number" />
@@ -218,7 +220,8 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
-                android:text="sdlvns"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:visibility="gone" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -240,8 +243,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusableInTouchMode="false"
-                    android:inputType="numberDecimal"
-                    android:fontFamily="@font/montserrat"/>
+                    android:fontFamily="@font/montserrat"
+                    android:inputType="numberDecimal" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.divider.MaterialDivider
@@ -266,15 +269,11 @@
                 android:layout_marginStart="10dp"
                 android:text="@string/ingredientsmin" />
 
-            <TextView
-                android:id="@+id/ingredients"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ingrRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
-                android:text="sdlvns"
-                android:visibility="gone" />
+                android:nestedScrollingEnabled="false" />
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -292,6 +291,7 @@
                 app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/outlinedInputIngredient"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusableInTouchMode="false"
@@ -320,23 +320,15 @@
                 android:layout_marginStart="10dp"
                 android:text="@string/cookingmin" />
 
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
-                android:id="@+id/coordinator_newrecipe"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/stepsRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/steps_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                </androidx.recyclerview.widget.RecyclerView>
-
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                android:layout_height="wrap_content"
+                tools:itemCount="3"
+                tools:listitem="@layout/view_ingredient" />
 
             <Button
-                android:id="@+id/textButton"
+                android:id="@+id/btnAddStep"
                 style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -345,11 +337,19 @@
                 android:text="@string/addstep"
                 android:textAllCaps="false"
                 android:textColor="?attr/colorOnSurface"
-                app:icon="@drawable/ic_add"
+                app:icon="@drawable/ic_add" />
+
+            <Button
+                android:id="@+id/btnSaveRecipe"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/saveRecipe"
+                android:textColor="@color/white"
                 />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
