--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -77,7 +77,8 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="150dp">
 
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -330,10 +331,11 @@
             <Button
                 android:id="@+id/btnAddStep"
                 style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:gravity="start|center"
                 android:text="@string/addstep"
                 android:textAllCaps="false"
                 android:textColor="?attr/colorOnSurface"
