--- a/app/src/main/res/layout/view_step.xml
+++ b/app/src/main/res/layout/view_step.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="horizontal">
+
     <ImageView
         android:id="@+id/handle"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_baseline_drag_indicator_24"
-        android:layout_marginStart="20dp"
         android:layout_gravity="center_vertical|end"
+        android:layout_marginStart="20dp"
         android:scaleType="center"
+        android:src="@drawable/ic_baseline_drag_indicator_24"
+        android:visibility="visible" />
 
-        />
     <EditText
         android:id="@+id/step"
+        style="@style/Base.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:hint="@string/cookingadd"
-        android:inputType="textMultiLine"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="5dp"
-        style="@style/Base.CardView"
-        android:textColor="@color/cardview_shadow_start_color"
-        />
-
-
-
-
+        android:layout_weight="1"
+        android:hint="@string/cookingadd"
+        android:inputType="textMultiLine"
+        android:textColor="@color/cardview_shadow_start_color" />
 </androidx.appcompat.widget.LinearLayoutCompat>
