--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -53,7 +53,7 @@
         android:paddingStart="20sp"
         android:paddingEnd="10sp"
         android:paddingBottom="10sp"
-        android:text="@string/ingredientproducer"
+        android:text="@string/ingredient_producer"
         android:textSize="16sp"
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
@@ -68,7 +68,7 @@
         android:layout_marginTop="0dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:hint="@string/ingredientqty"
+        android:hint="@string/ingredient_qty"
         app:endIconDrawable="@drawable/ic_baseline_clear_24"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
         android:layout_marginTop="0dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:hint="@string/ingredientunit"
+        android:hint="@string/ingredient_unit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/outlinedTextIngredientQty"
         app:startIconDrawable="@drawable/ic_baseline_format_list_bulleted_24">
