--- a/app/src/main/res/layout/view_step.xml
+++ b/app/src/main/res/layout/view_step.xml
@@ -24,7 +24,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
-        android:hint="@string/cookingadd"
+        android:hint="@string/cooking_add"
         android:inputType="textMultiLine"
         android:textColor="@color/cardview_shadow_start_color" />
 </androidx.appcompat.widget.LinearLayoutCompat>
