--- a/app/src/main/res/layout/view_ingredient_show.xml
+++ b/app/src/main/res/layout/view_ingredient_show.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
+        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ingr_name"
         app:layout_constraintHorizontal_bias="0"
