--- a/app/src/main/res/layout/fragment_new_recipe.xml
+++ b/app/src/main/res/layout/fragment_new_recipe.xml
@@ -17,27 +17,22 @@
             android:id="@+id/close"
             android:layout_width="23dp"
             android:layout_height="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/ic_baseline_clear_24"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:layout_marginTop="15dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            app:layout_constraintLeft_toLeftOf="@id/new_recipe"
+            app:layout_constraintTop_toTopOf="@id/btnSaveRecipe" />
 
         <Button
-            android:id="@+id/next_step"
+            android:id="@+id/btnSaveRecipe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="15dp"
-            android:background="@color/cardview_shadow_end_color"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="@string/next_step"
+            android:layout_margin="15dp"
+            android:enabled="false"
+            android:text="@string/save_recipe"
             android:textColor="@color/white"
-            android:textSize="14dp"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:id="@+id/new_recipe"
@@ -48,9 +43,9 @@
             android:includeFontPadding="false"
             android:text="@string/new_recipe"
             android:textColor="@color/black"
-            android:textSize="22dp"
+            android:textSize="22sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/close" />
 
 
@@ -61,7 +56,7 @@
             android:layout_marginStart="25dp"
             android:includeFontPadding="false"
             android:text="@string/shag1"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/new_recipe" />
@@ -74,25 +69,26 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/main_step3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="150dp">
+            android:layout_marginBottom="150dp"
+            android:orientation="vertical">
 
 
             <androidx.appcompat.widget.LinearLayoutCompat
-
+                android:id="@+id/main_step1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/outlinedTextName"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:id="@+id/filledTextName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_margin="15dp"
                     android:hint="@string/name"
+                    app:boxBackgroundColor="@color/white"
                     app:endIconMode="clear_text">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -103,15 +99,12 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/outlinedTextDescription"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:id="@+id/filledTextDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_margin="15dp"
                     android:hint="@string/description"
+                    app:boxBackgroundColor="@color/white"
                     app:endIconMode="clear_text">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -122,35 +115,48 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:id="@+id/necessarily"
+                    android:id="@+id/necessarily2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="30dp"
                     android:text="@string/necessarily"
-                    android:textSize="12dp" />
+                    android:textSize="12sp" />
 
                 <com.google.android.material.divider.MaterialDivider
                     android:layout_width="match_parent"
-                    android:layout_height="1dp" />
+                    android:layout_height="3dp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
-            <androidx.appcompat.widget.LinearLayoutCompat
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/main_step2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/outlinedTextCountPortions"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/people"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_margin="15dp"
+                    android:src="@drawable/ic_baseline_person_24"
+                    app:layout_constraintBottom_toBottomOf="@id/filledTextCountPortions"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/filledTextCountPortions" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/filledTextCountPortions"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
                     android:hint="@string/count_portion"
+                    app:boxBackgroundColor="@color/white"
                     app:endIconMode="clear_text"
-                    app:startIconDrawable="@drawable/ic_baseline_person_24">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/people"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/textInputQtyPortions"
@@ -160,18 +166,29 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/outlinedTextTime"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/schedule"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_margin="15dp"
+                    android:src="@drawable/ic_baseline_schedule_24"
+                    app:layout_constraintBottom_toBottomOf="@id/filledTextTime"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/filledTextTime"
+
+                    />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/filledTextTime"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="15dp"
                     android:hint="@string/time"
+                    app:boxBackgroundColor="@color/white"
                     app:endIconMode="clear_text"
-                    app:startIconDrawable="@drawable/ic_baseline_schedule_24">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/schedule"
+                    app:layout_constraintTop_toBottomOf="@id/filledTextCountPortions">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/textInputTime"
@@ -181,19 +198,26 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:id="@id/necessarily"
+                    android:id="@id/necessarily2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="10dp"
                     android:text="@string/necessarily"
-                    android:textSize="12dp" />
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toTopOf="@id/divider"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/filledTextTime" />
 
                 <com.google.android.material.divider.MaterialDivider
+                    android:id="@+id/divider"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                    android:layout_height="3dp"
+                    android:layout_marginTop="30dp"
+                    app:layout_constraintTop_toBottomOf="@id/necessarily2" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/category"
@@ -203,14 +227,14 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:text="@string/category"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/categorymin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:text="@string/category_min" />
 
             <TextView
@@ -225,31 +249,33 @@
                 android:visibility="gone" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/outlinedTextCategory"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:id="@+id/filledTextCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="30dp"
                 android:hint="@string/category_add"
+                app:boxBackgroundColor="@color/white"
                 app:endIconDrawable="@drawable/ic_baseline_clear_24"
                 app:endIconMode="clear_text"
-                app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24">
+                app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24"
+                app:startIconTint="@color/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/outlinedInputCategory"
+                    android:id="@+id/filledInputCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:fontFamily="@font/montserrat"
-                    android:inputType="numberDecimal" />
+                    android:inputType="none" />
+
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
-                android:layout_height="1dp" />
+                android:layout_height="3dp" />
 
             <TextView
                 android:id="@+id/ingredient"
@@ -259,14 +285,14 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:text="@string/ingredients"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/ingredientmin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:text="@string/ingredients_min" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -275,32 +301,33 @@
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false" />
 
-
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/outlinedTextIngredients"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:id="@+id/filledTextIngredient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="15dp"
                 android:hint="@string/ingredients_add"
+                app:boxBackgroundColor="@color/white"
                 app:endIconDrawable="@drawable/ic_baseline_clear_24"
                 app:endIconMode="clear_text"
-                app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24">
+                app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24"
+                app:startIconTint="@color/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/outlinedInputIngredient"
+                    android:id="@+id/filledInputIngredient"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
                     android:focusableInTouchMode="false"
-                    android:inputType="numberDecimal" />
+                    android:fontFamily="@font/montserrat"
+                    android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
+
 
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
-                android:layout_height="1dp" />
+                android:layout_marginTop="15dp"
+                android:layout_height="3dp" />
 
             <TextView
                 android:id="@+id/cooking"
@@ -310,7 +337,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:text="@string/cooking"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <com.google.android.material.chip.Chip
@@ -334,20 +361,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginBottom="30dp"
                 android:gravity="start|center"
                 android:text="@string/add_step"
                 android:textAllCaps="false"
                 android:textColor="?attr/colorOnSurface"
                 app:icon="@drawable/ic_add" />
 
-            <Button
-                android:id="@+id/btnSaveRecipe"
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="match_parent"
+                android:layout_height="3dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/filledTextLink"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="@string/save_recipe"
-                android:textColor="@color/white"
-                />
+                android:layout_margin="15dp"
+                android:hint="@string/link_add"
+                app:boxBackgroundColor="@color/white"
+                app:endIconDrawable="@drawable/ic_baseline_clear_24"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24"
+                app:startIconTint="@color/colorPrimary" >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/filledInputLink"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
