--- a/app/src/main/res/layout/view_step_show.xml
+++ b/app/src/main/res/layout/view_step_show.xml
@@ -9,7 +9,8 @@
         android:id="@+id/step_show"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="16sp"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
